# 3d-viewer

./: CMakeLists.txt  README.md  main.cpp  qrc.qrc
qml/: AddObjectDialog.qml  Main.qml  PrimitiveDelegate.qml  SceneView.qml  Sidebar.qml
src/: Shape.h  scene_manager.cpp  scene_manager.h  shape.cpp
